Fixed bug #38234 (Exception in __clone makes memory leak)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_2@217167 c90b9560-bf6c-de11-be94-00142212c4b1